eshoponweb/ingress-controller.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress-eshop
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
  namespace: ingress-nginx  
spec:
  ingressClassName: nginx
  tls: 
    - hosts: 
        - eshoponweb.cloudns.biz
      secretName: eshoponweb-secret
  rules:
  - host: eshoponweb.cloudns.biz
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: eshopwebmvc
              port:
                number: 80
